<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="title_home">Friends</string>
    <string name="title_notifications">Profile</string>
    <string name="button_add">Add</string>
    <string name="requests">Requests</string>
    <string name="button_not_sleep">I\'m not sleeping!</string>
    <string name="search_add">Add</string>
    <string name="user_name">User name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="volume_low">Off</string>
    <string name="volume_medium">Medium</string>
    <string name="volume_max">I want to wake up!</string>
    <string name="unable_load_friends">Unable to load friends</string>
    <string name="vibration">Vibration</string>
    <string name="notification_ongoing_title">Wake up!</string>
    <string name="notification_ongoing">Wake up right now!</string>
    <string name="notification_missed_title">Wake up missed</string>
    <string name="notification_missed">We were unable to wake you up</string>
    <string name="firebase_success">Connected to Firebase</string>
    <string name="firebase_error">Failed connect to Firebase</string>
    <string name="message_call_sent">Call sent</string>
    <string name="retry">Retry</string>
    <string name="error_default">An error occurred</string>
    <string name="unable_load_requests">Unable to load requests</string>
    <string name="no_new_requests">Seems like you have no new requests</string>
    <string name="error_match_passwords">Password does not match confirm</string>
    <string name="error_empty_fields">All fields are required</string>
    <string name="no_account">Has no account?</string>
    <string name="login_button">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Enter some info</string>
    <string name="login_text_field">login</string>
    <string name="password_text_field">password</string>
    <string name="password_confirm_text_field">confirm password</string>
    <string name="register_button">Register</string>
    <string name="logout">Logout</string>

    <string name="item_dropdown_friends_remove">Remove from friends</string>
</resources>
