<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/login_text_field"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/password_text_field"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/password_confirm_text_field"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_accent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/register_button"
        android:textColor="@android:color/background_light" />
</LinearLayout>