<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="Wake me up!"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/login_text_field"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ripple_input"
        android:ems="10"
        android:hint="@string/password_text_field"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_accent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/no_account"
        android:textSize="14sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_accent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/register" />
</LinearLayout>