<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/volume_set_group"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:background="@drawable/dialog_inset"
    android:minWidth="300dp"
    android:orientation="vertical"
    tools:context=".ui.settings.volume.VolumeSetFragment">


    <RadioButton
        android:id="@+id/volume_set_low"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/volume_low"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/volume_set_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/volume_medium"
        android:textSize="18sp" />

    <RadioButton
        android:id="@+id/volume_set_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:text="@string/volume_max"
        android:textSize="18sp" />
</RadioGroup>