<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <ImageButton
        android:id="@+id/settings_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ripple_transparent"
        android:src="?attr/homeAsUpIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/request_back"
        android:gravity="center_vertical"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/settings_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_volume"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_transparent"
        android:drawableLeft="@drawable/ic_volume"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:text="@string/volume"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/setting_vibration"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ripple_transparent"
        android:drawableStart="@drawable/ic_vibration"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:text="@string/vibration"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_volume" />

    <Switch
        android:id="@+id/settings_vibration_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/setting_vibration"
        app:layout_constraintEnd_toEndOf="@+id/setting_vibration"
        app:layout_constraintTop_toTopOf="@+id/setting_vibration" />

</android.support.constraint.ConstraintLayout>